plugins {
    id 'org.springframework.boot' version '2.7.14'
    id 'io.spring.dependency-management' version '1.0.14.RELEASE'
    id 'java'
}

group = 'no.fintlabs'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    repositories {
        maven {
            url "https://repo.fintlabs.no/releases"
        }
    }
    mavenLocal()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.106.Final:osx-aarch_64'

    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'no.fintlabs:fint-kafka:4.0.1'
    implementation 'no.fintlabs:fint-flyt-kafka:3.0.2'

    implementation 'no.fintlabs:fint-flyt-cache:1.2.3'
    implementation 'org.apache.commons:commons-lang3:3.14.0'

    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'javax.validation:validation-api'
    implementation 'org.hibernate.validator:hibernate-validator'
    implementation 'javax.el:javax.el-api:3.0.0'
    implementation 'org.glassfish:jakarta.el:3.0.4'

    implementation 'org.apache.commons:commons-collections4:4.4'

    implementation 'no.fint:fint-model-resource:0.4.1'
    implementation "no.fint:fint-arkiv-resource-model-java:${apiVersion}"
    implementation "no.fint:fint-administrasjon-resource-model-java:${apiVersion}"

    implementation 'no.fintlabs:fint-flyt-resource-server:2.0.0'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'cglib:cglib-nodep:3.3.0'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
}

test {
    useJUnitPlatform()
}

jar {
    enabled = true
    archiveVersion = ""
    archiveClassifier = ""
}
